index.css
@import "tailwindcss";

.bgHexagon {
  background-color: #fefdfe;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%238e9192' fill-opacity='0.47' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
}

.techcarousel {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  touch-action: pan-y pinch-zoom;
}

.techcarousel::-webkit-scrollbar {
  display: none;
}

.techcarousel .carouselgroup .card {
  aspect-ratio: 1;
  width: 4rem;
  padding: 0.6rem;
  box-sizing: border-box;
  align-content: center;
  overflow: hidden;
  border-radius: 5px;
  border-width: 0.5px;
  border-color: oklch(37.1% 0 0);
}

#languageDropdown {
  visibility: hidden;
  opacity: 0;
  transition:
    opacity 0.3s ease,
    transform 0.3s ease,
    visibility 0.3s;
}

#languageDropdown.active {
  display: absolute;
  visibility: visible;
  opacity: 1;
}

@media (width >= 46rem) {
  @media (orientation: landscape) {
    .techcarousel .carouselgroup .card {
      width: 7dvw;
    }
  }
  @media not (orientation: landscape) {
    .techcarousel .carouselgroup .card {
      width: 12dvw;
    }
  }
}

@media (width >= 64rem) {
  .techcarousel .carouselgroup .card {
    width: 5dvw;
  }

  @media not (orientation: landscape) {
    .techcarousel .carouselgroup .card {
      width: 6dvh;
    }
  }
}

.techcarousel .carouselgroup .card:hover {
  border-color: oklch(55.6% 0 0);
}

.carouselgroup {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  padding-right: 1rem;
  animation: carousel-spin 40s linear infinite;
}

.slider::-webkit-scrollbar {
  display: none;
}

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@font-face {
  font-family: "Norse";
  src: url("src/assets/fonts/Norse.otf") format("opentype");
  font-weight: normal;
}

@font-face {
  font-family: "Norse";
  src: url("src/assets/fonts/Norse-Bold.otf") format("opentype");
  font-weight: bold;
}

@keyframes swing {
  0% {
    transform: rotate(0deg);
    transform-origin: top center;
  }
  25% {
    transform: rotate(15deg);
    transform-origin: top center;
  }
  50% {
    transform: rotate(0deg);
    transform-origin: top center;
  }
  75% {
    transform: rotate(-15deg);
    transform-origin: top center;
  }
  100% {
    transform: rotate(0deg);
    transform-origin: top center;
  }
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}

@keyframes grass-appear {
  0% {
    transform: translateY(100%);
    opacity: 0%;
  }
  100% {
    transform: translateY(0);
    opacity: 100%;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes carousel-spin {
  from {
    translate: 0;
  }
  to {
    translate: -100%;
  }
}

@theme {
  --breakpoint-xxs: 25rem;
  --breakpoint-xs: 31rem;
  --font-quicksand: "Quicksand", sans-serif;
  --font-norse: "Norse", sans-serif;
  --font-juliusSansOne: "Julius Sans One", sans-serif;
  --font-openSans: "Open Sans", sans-serif;
  --animate-swing: swing 0.8s linear forwards;
  --animate-blink: blink 0.8s infinite;
  --animate-grass-appear: grass-appear 1.5s linear;
  --animate-fade-in: fadeIn 2s linear forwards;
  --color-principal-50: #fafafa;
  --color-principal-100: #f5f5f5;
  --color-principal-200: #e6e6e6;
  --color-principal-300: #d6d6d6;
  --color-principal-400: #a5a5a5;
  --color-principal-500: #767676;
  --color-principal-600: #575757;
  --color-principal-700: #434343;
  --color-principal-800: #222222;
  --color-principal-900: #1a1a1a;
  --color-principal-950: #0a0a0a;
}

